--- a/styles/styles.css
+++ b/styles/styles.css
@@ -27,6 +27,7 @@ header {
   justify-content: space-around;
   align-items: center;
   background-color: #000000;
+  border: 3px solid #ffd700;
 }
 
 .p4 {
@@ -298,6 +299,7 @@ footer {
   background-size: contain;
   text-align: center;
   padding: 25px 0px;
+  border: 3px solid #ffd700;
 }
 
 .p1 {
@@ -323,13 +325,25 @@ footer {
 /*MOBILE*/
 @media screen and (max-width: 1165px) {
   .fotocard1 {
-    width: 700px;
+    width: 930px;
     height: 400px;
+  }
+  .cardtamano {
+    display: flex;
+    width: auto;
+    justify-content: center;
+    margin: auto;
   }
 }
 @media screen and (max-width: 995px) {
+  .c1 {
+    display: flex;
+    width: 500px;
+    height: 475px;
+    margin: auto;
+  }
   .fotocard1 {
-    width: 600px;
+    width: 595px;
     height: 300px;
   }
   .textcard {
@@ -340,9 +354,8 @@ footer {
   }
   .cardtamano {
     display: flex;
-    width: 700px;
+    width: 600px;
     justify-content: center;
-    margin: auto;
   }
 }
 @media screen and (max-width: 750px) {
@@ -507,14 +520,65 @@ footer {
     width: 300px;
   }
   .fotocard1 {
-    width: 250px;
-    height: 150px;
+    width: 350px;
+    height: 240px;
   }
   .textcard {
     font-size: 15px;
   }
   .textcard1 {
     font-size: 15px;
+  }
+  .cardtamano {
+    width: auto;
+  }
+  .buttoninfo {
+    font-size: 15px;
+  }
+}
+@media screen and (max-width: 420px) {
+  .fotocard1 {
+    width: 300px;
+    height: 200px;
+  }
+  .cardtamano {
+    width: auto;
+  }
+}
+@media screen and (max-width: 370px) {
+  .texto11 {
+    display: flex;
+    color: #fff;
+    border: 3px solid #ffd700;
+    background-image: linear-gradient(to right, #000000, rgb(82, 76, 76));
+    padding: 30px;
+    font-size: 15px;
+    margin: auto;
+    text-align: center;
+    justify-content: center;
+    width: 200px;
+  }
+  .c1 {
+    display: flex;
+    width: 250px;
+    height: 200px;
+    margin: auto;
+  }
+  .c3 {
+    display: flex;
+    width: 250px;
+    height: 250px;
+    margin: auto;
+  }
+  .c4 {
+    display: flex;
+    width: 200px;
+    height: 300px;
+    margin: auto;
+  }
+  .fotocard1 {
+    width: 225px;
+    height: 140px;
   }
   .cardtamano {
     width: auto;
