--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -6,6 +6,7 @@ footer {
     background-size: contain;
     text-align: center;
     padding: 25px 0px;
+    border: 3px solid map-get($colores, color-tertiary)
 }
 
 .p1 {
