--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -8,6 +8,7 @@ header {
     justify-content: space-around;
     align-items: center;
     background-color: map-get($colores, color-secondary);
+    border: 3px solid map-get($colores, color-tertiary);
 }
 
 .p4 {
