--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -4,7 +4,6 @@ header {
     display: flex;
     width: auto;
     padding: 5px 0px;
-    flex-direction: column;
     justify-content: space-around;
     align-items: center;
     background-color: map-get($colores, color-secondary);
@@ -16,7 +15,7 @@ header {
     height: 200px;
     border-radius: 50px;
     transition: 0.5s;
-    margin: auto;
+    margin-left: 100px;
     padding: 10px;
 
     &:hover {
