--- a/styles/partials/_main.scss
+++ b/styles/partials/_main.scss
@@ -222,6 +222,7 @@ main {
 
 .buttoninfo {
     @include buttonlocal ($backColor: map-get($colores, color-secondary));
+    text-decoration: none;
 }
 
 .pcarrousel {
