--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,7 +14,7 @@
 }
 
 /*FONTS*/
-.pcarrousel, .buttoninfo, .texto11, .c2, .textohistoria, .t1, .navtexto:hover, .navtexto, .nav1 {
+.pcontactfot, .iconopagfooter, .footer1, .pcarrousel, .buttoninfo, .texto11, .c2, .textohistoria, .t1, .navtexto:hover, .navtexto, .nav1 {
   border-radius: 30px;
 }
 
@@ -284,7 +284,9 @@ main {
   padding: 20px;
   color: #fff;
   font-family: "Permanent Marker", cursive;
+  font-size: 25px;
   transition: 0.5s;
+  text-decoration: none;
 }
 .buttoninfo:hover {
   background-color: #ffd700;
@@ -331,7 +333,31 @@ footer {
 .footer1 {
   font-family: "Raleway", sans-serif;
   font-size: 15px;
-  color: #000000;
+  color: #fff;
+  padding: 5px;
+  border: 1px solid #000000;
+  background-color: #000000;
+}
+
+.iconopagfooter {
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  width: 200px;
+  transition: 0.5s;
+}
+.iconopagfooter:hover {
+  transform: scale(1.1);
+}
+
+.pcontactfot {
+  font-family: "Permanent Marker", cursive;
+  font-size: 20px;
+  color: #fff;
+  border: 1px solid #000000;
+  background-color: #000000;
+  max-width: 300px;
+  margin: auto;
 }
 
 /*MOBILE*/
@@ -459,10 +485,32 @@ footer {
     width: 30px;
     height: 30px;
   }
+  footer {
+    background-size: auto;
+  }
   .footer1 {
     font-family: "Raleway", sans-serif;
     font-size: 10px;
-    color: #000000;
+    color: #fff;
+  }
+  .iconopagfooter {
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    width: 100px;
+    transition: 0.5s;
+  }
+  .iconopagfooter:hover {
+    transform: scale(1.1);
+  }
+  .pcontactfot {
+    font-family: "Permanent Marker", cursive;
+    font-size: 10px;
+    color: #fff;
+    border: 1px solid #000000;
+    background-color: #000000;
+    max-width: 150px;
+    margin: auto;
   }
   .p1 {
     font-size: 15px;
@@ -565,8 +613,28 @@ footer {
     font-size: 20px;
     background-color: #000000;
   }
+  .buttoninfo {
+    font-size: 13px;
+  }
 }
 @media screen and (max-width: 420px) {
+  .itf {
+    border-radius: 100px;
+    width: 25px;
+    height: 25px;
+  }
+  .formulario1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    background-image: linear-gradient(to right, #000000, rgb(82, 76, 76));
+    border-radius: 15px;
+    border: 3px solid #ffd700;
+    margin: auto;
+    width: 250px;
+  }
   .fotocard1 {
     width: 300px;
     height: 200px;
