modifico error en footer

--- a/styles/partials/_mediaqueries.scss
+++ b/styles/partials/_mediaqueries.scss
@@ -182,7 +182,7 @@
         justify-content: center;
         margin: auto;
         width: 100px;
-        @extend %borderRadius;
+        border-radius: 20px;
         transition: 0.5s;
 
         &:hover {
