--- a/styles/styles.css
+++ b/styles/styles.css
@@ -244,6 +244,28 @@ main {
   width: auto;
   height: 500px;
   background-color: #000000;
+  transition: 0.1s;
+}
+.fotocard1:hover {
+  opacity: 1;
+  -webkit-animation: flash 1.5s;
+  animation: flash 1.5s;
+}
+@-webkit-keyframes flash {
+  0% {
+    opacity: 0.4;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes flash {
+  0% {
+    opacity: 0.4;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 .textcard {
