--- a/styles/partials/_main.scss
+++ b/styles/partials/_main.scss
@@ -145,49 +145,14 @@ main {
     margin: auto;
 }
 
-.formulario1 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    align-items: center;
-    background-image: linear-gradient(to right, $color-secondary, $colorGradiet);
-    border-radius: 15px;
-    border: 3px solid map-get($colores, color-tertiary);
-    margin: auto;
-    width: 500px;
-}
-
-.form1 {
-    font-size: 20px;
-    color: map-get($colores, color-secondary);
-    margin-top: 30px;
-    cursor: pointer;
-    transition: 0.5s;
-    border-radius: 15px;
-    border-color: map-get($colores, color-primary);
-
-    &:hover {
-        color: map-get($colores, color-primary);
-        background-color: map-get($colores, color-secondary);
-        border-color: map-get($colores, color-tertiary);
-    }
-}
-
-
-.textoform {
-    color: map-get($colores, color-primary);
-    text-decoration: underline;
-}
-
 
 .fotocard1 {
     display: flex;
     justify-content: center;
     text-align: center;
     margin: auto;
-    width: auto;
-    height: 500px;
+    width: 925px;
+    height: 400px;
     background-color: map-get($colores, color-secondary);
     transition: 0.1s;
 
@@ -224,12 +189,24 @@ main {
     font-size: 45px;
     font-family: 'Permanent Marker', cursive;
     border: 1px solid map-get($colores, color-secondary);
+    transition: 0.2s;
+
+    &:hover {
+        color: map-get($colores, color-tertiary);
+
+    }
 }
 
 .textcard1 {
     color: map-get($colores, color-primary);
     font-size: 25px;
     font-family: 'Permanent Marker', cursive;
+    transition: 0.2s;
+
+    &:hover {
+        color: map-get($colores, color-tertiary);
+
+    }
 }
 
 .fondocard {
@@ -242,7 +219,8 @@ main {
 }
 
 .cardtamano {
-    width: 1105px;
+    width: 930px;
+    height: 500px;
     margin: auto;
 }
 
@@ -264,4 +242,23 @@ main {
     font-family: 'Permanent Marker', cursive;
     font-size: 35px;
     background-color: map-get($colores, color-secondary);
+}
+
+.formunew {
+    border: 3px solid map-get($colores, color-secondary);
+    @extend %borderRadius;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 500px;
+    margin: auto;
+    padding: 30px;
+    font-family: 'Permanent Marker', cursive;
+
+}
+
+.textoform {
+    color: map-get($colores, color-secondary);
+    font-family: 'Permanent Marker', cursive;
 }
