--- a/styles/partials/_mediaqueries.scss
+++ b/styles/partials/_mediaqueries.scss
@@ -226,7 +226,7 @@
     .c3 {
         display: flex;
         width: 300px;
-        height: 300px;
+        height: auto;
         margin: auto;
     }
 
@@ -372,8 +372,8 @@
 
     .c3 {
         display: flex;
-        width: 250px;
-        height: 250px;
+        width: 215px;
+        height: auto;
         margin: auto;
     }
 
