--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,7 +14,7 @@
 }
 
 /*FONTS*/
-.iconopagfooter, .footer1, .formunew, .pcarrousel, .buttoninfo, .texto11, .c2, .textohistoria, .t1, .navtexto:hover, .navtexto, .nav1 {
+.iconopagfooter, .footer1, .formunew, .pcarrousel, .buttoninfo, .cardtamano, .fondocard, .textcard1, .textcard, .fotocard1, .texto11, .c2, .textohistoria, .t1, .navtexto:hover, .navtexto, .nav1 {
   border-radius: 30px;
 }
 
@@ -112,8 +112,8 @@ main {
   border: 3px solid #ffd700;
   margin: auto;
   width: 500px;
-  color: #ffd700;
-  background-image: linear-gradient(to right, #000000, rgb(82, 76, 76));
+  color: #fff;
+  background-color: #000000;
 }
 
 .t1 {
@@ -297,7 +297,7 @@ main {
   text-align: center;
   margin: auto;
   max-width: 800px;
-  border: 2px solid #000000;
+  border: 2px solid #ffd700;
   color: #fff;
   font-family: "Permanent Marker", cursive;
   font-size: 35px;
@@ -498,8 +498,8 @@ footer {
     border: 3px solid #ffd700;
     margin: auto;
     width: 250px;
-    color: #ffd700;
-    background-image: linear-gradient(to right, #000000, rgb(82, 76, 76));
+    color: #fff;
+    background-image: #000000;
   }
   .iconored {
     width: 30px;
@@ -617,7 +617,7 @@ footer {
     text-align: center;
     margin: auto;
     max-width: 800px;
-    border: 2px solid #000000;
+    border: 2px solid #ffd700;
     color: #fff;
     font-family: "Permanent Marker", cursive;
     font-size: 20px;
@@ -682,5 +682,18 @@ footer {
   }
   .cardtamano {
     width: 225px;
+  }
+  .promocion1 {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    padding: 20px;
+    font-family: "Permanent Marker", cursive;
+    font-size: 15px;
+    border: 3px solid #ffd700;
+    margin: auto;
+    width: 250px;
+    color: #fff;
+    background-image: #000000;
   }
 }/*# sourceMappingURL=styles.css.map */
