--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,6 +13,25 @@
   font-family: "Source Sans Pro", sans-serif;
 }
 
+*::-webkit-scrollbar {
+  width: 12px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #000000;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #ffd700;
+  border-radius: 20px;
+  border: 3px solid #000000;
+}
+
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #ffd700 #000000;
+}
+
 /*FONTS*/
 .iconopagfooter, .footer1, .formunew, .buttoninfo, .cardtamano, .textcard1, .textcard, .fotocard1, .texto11, .c2, .textohistoria, .t1, .navtexto:hover, .navtexto, .nav1 {
   border-radius: 30px;
